network-policy/np-space1-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np
  namespace: space1
spec:
  podSelector: []
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLables:
              environment: dev
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
