network-policy/np-space2-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np
  namespace: space2
spec:
  podSelector: []
  policyTypes:
    - Ingress
  Ingress:
    - from:
        - namespaceSelector:
            matchLables:
              environment: prod
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
